# Unframe

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.md  MANIFEST.ru.md  README.md
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: main.rs
crates/unframe-adapter-html/: Cargo.toml
crates/unframe-adapter-html/src/: lib.rs
crates/unframe-model/: Cargo.toml
crates/unframe-model/src/: lib.rs
crates/unframe-network/: Cargo.toml
crates/unframe-network/src/: lib.rs
crates/unframe-parser/: Cargo.toml
crates/unframe-parser/src/: lib.rs
crates/unframe-renderer/: Cargo.toml
crates/unframe-renderer/src/: lib.rs
docs/adr/: ADR-001-no-browser-engine.md  ADR-002-information-document-model.md  ADR-003-single-network-gateway.md  ADR-004-windows-gnu-toolchain.md  ADR-005-adapter-output-contract.md
docs/benchmarks/: reference-machine.md
docs/examples/: NPR___National_Public_Radio.unframe.json
fixtures/article-simple/: source.html
