[package]
name = "unframe"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "unframe"
path = "src/main.rs"

[dependencies]
unframe-model = { path = "../crates/unframe-model" }
unframe-network = { path = "../crates/unframe-network" }
unframe-parser = { path = "../crates/unframe-parser" }
unframe-adapter-html = { path = "../crates/unframe-adapter-html" }
unframe-renderer = { path = "../crates/unframe-renderer" }
tokio = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
open = "5"
rfd = "0.15"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
